@@ -12,6 +12,7 @@
 - NXSL:
 	- New class "InetAddress"
 	- New attribute "ipAddressList" for class "Interface"
+	- New method "enableRoutingTablePolling" in class "Node"
 - Management console:
 	- Improved status map
 - Fixed issues: NX-930, NX-1143, NX-1263, NX-1272, NX-1273, NX-1278, NX-1281, NX-1284, NX-1285
